@@ -1,6 +1,6 @@
 import static org.gradle.api.JavaVersion.VERSION_17
 import static org.gradle.jvm.toolchain.JavaLanguageVersion.of
-import static org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_17
+import static org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_11
 import static org.jetbrains.kotlin.gradle.dsl.KotlinVersion.KOTLIN_1_8
 import org.jetbrains.dokka.gradle.DokkaTask
 
@@ -37,7 +37,6 @@ tasks.named("wrapper") {
 }
 
 def javaVersion = VERSION_17
-def javaVersionNumber = javaVersion.majorVersion.toInteger()
 
 snyk {
     api = project.findProperty("snykApiToken") ?: System.getenv('SNYK_TOKEN')
@@ -52,31 +51,27 @@ allprojects {
     pluginManager.withPlugin('java') {
         java {
             toolchain {
-                languageVersion = of(javaVersionNumber)
+                languageVersion = of(javaVersion.majorVersion.toInteger())
             }
 
             withSourcesJar()
         }
 
         tasks.withType(JavaCompile).configureEach {
-            options.release = javaVersionNumber
+            options.release = 11
             options.encoding = 'UTF-8'
             options.compilerArgs += [ '-XDenableSunApiLintControl', '-parameters' ]
         }
 
         tasks.withType(Test).configureEach {
             useJUnitPlatform(){
-                if (project.hasProperty('runMultiClusterTests')) {
-                    includeTags 'MultiCluster'
-                } else if (project.hasProperty('runUnstableTests')) {
-                    includeTags 'runUnstableTests'
-                } else {
-                    excludeTags 'MultiCluster', 'Unstable'
-                }
+                excludeTags project.hasProperty('runUnstableTests') ? 'runAllTestsNoExclusions' : 'Unstable'
+                excludeTags project.hasProperty('runMultiClusterTests') ? 'runAllTestsNoExclusions' : 'MultiCluster'
             }
 
             doFirst {
                 systemProperty 'java.io.tmpdir', buildDir.absolutePath
+                jvmArgs '--illegal-access=deny'
             }
         }
     }
@@ -96,10 +91,10 @@ allprojects {
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
         compilerOptions {
-            allWarningsAsErrors = true
+            allWarningsAsErrors = false
             languageVersion = KOTLIN_1_8
             apiVersion = KOTLIN_1_8
-            jvmTarget = JVM_17
+            jvmTarget = JVM_11
             javaParameters = true   // Useful for reflection.
             freeCompilerArgs.addAll([
                 "-Xjvm-default=all"
@@ -116,7 +111,7 @@ allprojects {
     pluginManager.withPlugin('biz.aQute.bnd.builder') {
         tasks.withType(aQute.bnd.gradle.TestOSGi).configureEach {
             javaLauncher = javaToolchains.launcherFor {
-                languageVersion = of(javaVersionNumber)
+                languageVersion = of(javaVersion.getMajorVersion().toInteger())
             }
         }
     }
